build(deps): packages

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "borderless",
   "private": true,
   "description": "Gatsby Blog, 'Borderless' Theme By Junhobaik",
-  "version": "5.13.4",
+  "version": "5.13",
   "author": "kozistr",
   "keywords": [
     "gatsby",
@@ -18,14 +18,14 @@
     "url": "https://github.com/kozistr/kozistr.github.io/issues"
   },
   "scripts": {
-    "init": "pnpm install -g gatsby@latest gatsby-cli@latest npm-check-updates cross-env",
+    "init": "pnpm install -g gatsby@latest gatsby-cli@latest npm-check-updates cross-env eslint@latest",
     "develop": "gatsby develop",
     "build": "cross-env GATSBY_CPU_COUNT=8 GATSBY_EXPERIMENTAL_QUERY_CONCURRENCY=8 GATSBY_EXPERIMENTAL_PAGE_BUILD_ON_DATA_CHANGES=true gatsby build --prefix-paths --write-to-file --log-pages",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "deploy": "pnpm run build && gh-pages -b main -d public",
     "format": "prettier --write \"**/*.{js,jsx,json,scss,tsx,ts}\"",
-    "lint": "eslint --ext .js,.jsx --ignore-pattern public .",
+    "lint": "eslint -c eslint.config.js --ignore-pattern public ./src",
     "update": "npm-check-updates -u"
   },
   "engines": {
@@ -36,6 +36,7 @@
   ],
   "dependencies": {
     "@emotion/react": "^11.11.4",
+    "@eslint/eslintrc": "^3.1.0",
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-brands-svg-icons": "^6.5.2",
     "@fortawesome/free-regular-svg-icons": "^6.5.2",
@@ -47,7 +48,7 @@
     "@reduxjs/toolkit": "^2.2.5",
     "cross-env": "^7.0.3",
     "css-minimizer-webpack-plugin": "^7.0.0",
-    "gatsby": "^5.13.5",
+    "gatsby": "^5.13.6",
     "gatsby-plugin-feed": "^5.13.1",
     "gatsby-plugin-google-gtag": "^5.13.1",
     "gatsby-plugin-image": "^3.13.1",
@@ -90,29 +91,29 @@
     "react-share": "^5.1.0",
     "react-typography": "^0.16.23",
     "redux": "^5.0.1",
-    "terser": "^5.31.0",
+    "terser": "^5.31.1",
     "theme-ui": "^0.16.2",
     "typography": "^0.16.24"
   },
   "devDependencies": {
-    "@types/lodash": "^4.17.4",
+    "@types/lodash": "^4.17.5",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-helmet": "^6.1.11",
     "@types/react-redux": "^7.1.33",
     "@types/typography": "^0.16.7",
-    "@typescript-eslint/eslint-plugin": "^7.10.0",
-    "@typescript-eslint/parser": "^7.10.0",
+    "@typescript-eslint/eslint-plugin": "^7.12.0",
+    "@typescript-eslint/parser": "^7.12.0",
     "autoprefixer": "^10.4.19",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^8.10.0",
+    "eslint": "^9.4.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-react": "^7.34.2",
     "gh-pages": "^6.1.1",
     "postcss": "^8.4.38",
-    "prettier": "^3.2.5",
-    "tailwindcss": "^3.4.3",
+    "prettier": "^3.3.1",
+    "tailwindcss": "^3.4.4",
     "typescript": "^5.4.5"
   },
   "pnpm": {
