--- a/package.json
+++ b/package.json
@@ -29,26 +29,26 @@
     "update": "npm-check-updates -u"
   },
   "engines": {
-    "node": "^20.0.0"
+    "node": ">=20.0.0"
   },
   "browserslist": [
     ">0.25%, not dead and supports es6-module"
   ],
   "dependencies": {
-    "@emotion/react": "^11.11.4",
+    "@emotion/react": "^11.13.0",
     "@eslint/eslintrc": "^3.1.0",
-    "@fortawesome/fontawesome-svg-core": "^6.5.2",
-    "@fortawesome/free-brands-svg-icons": "^6.5.2",
-    "@fortawesome/free-regular-svg-icons": "^6.5.2",
-    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-brands-svg-icons": "^6.6.0",
+    "@fortawesome/free-regular-svg-icons": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@gatsbyjs/reach-router": "^2.0.1",
     "@giscus/react": "^3.0.0",
     "@mdx-js/react": "^3.0.1",
-    "@reduxjs/toolkit": "^2.2.5",
+    "@reduxjs/toolkit": "^2.2.7",
     "cross-env": "^7.0.3",
     "css-minimizer-webpack-plugin": "^7.0.0",
-    "gatsby": "^5.13.6",
+    "gatsby": "^5.13.7",
     "gatsby-plugin-feed": "^5.13.1",
     "gatsby-plugin-google-gtag": "^5.13.1",
     "gatsby-plugin-image": "^3.13.1",
@@ -74,7 +74,7 @@
     "gatsby-source-filesystem": "^5.13.1",
     "gatsby-transformer-remark": "^6.13.1",
     "gatsby-transformer-sharp": "^5.13.1",
-    "katex": "0.16.10",
+    "katex": "0.16.11",
     "lodash": "^4.17.21",
     "mobile-detect": "^1.4.5",
     "moment": "^2.30.1",
@@ -91,30 +91,30 @@
     "react-share": "^5.1.0",
     "react-typography": "^0.16.23",
     "redux": "^5.0.1",
-    "terser": "^5.31.1",
+    "terser": "^5.31.3",
     "theme-ui": "^0.16.2",
     "typography": "^0.16.24"
   },
   "devDependencies": {
-    "@types/lodash": "^4.17.5",
+    "@types/lodash": "^4.17.7",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-helmet": "^6.1.11",
     "@types/react-redux": "^7.1.33",
     "@types/typography": "^0.16.7",
-    "@typescript-eslint/eslint-plugin": "^7.12.0",
-    "@typescript-eslint/parser": "^7.12.0",
+    "@typescript-eslint/eslint-plugin": "^8.0.0",
+    "@typescript-eslint/parser": "^8.0.0",
     "autoprefixer": "^10.4.19",
-    "eslint": "^9.4.0",
+    "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-react": "^7.34.2",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react": "^7.35.0",
     "gh-pages": "^6.1.1",
-    "postcss": "^8.4.38",
-    "prettier": "^3.3.1",
-    "tailwindcss": "^3.4.4",
-    "typescript": "^5.4.5"
+    "postcss": "^8.4.40",
+    "prettier": "^3.3.3",
+    "tailwindcss": "^3.4.7",
+    "typescript": "^5.5.4"
   },
   "pnpm": {
     "overrides": {
