--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     ">0.25%, not dead and supports es6-module"
   ],
   "dependencies": {
-    "@emotion/react": "^11.13.0",
+    "@emotion/react": "^11.13.3",
     "@eslint/eslintrc": "^3.1.0",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
@@ -53,7 +53,7 @@
     "gatsby-plugin-google-gtag": "^5.13.1",
     "gatsby-plugin-image": "^3.13.1",
     "gatsby-plugin-manifest": "^5.13.1",
-    "gatsby-plugin-offline": "^6.13.2",
+    "gatsby-plugin-offline": "^6.13.3",
     "gatsby-plugin-pnpm-gatsby-5": "^1.2.11",
     "gatsby-plugin-react-helmet": "^6.13.1",
     "gatsby-plugin-remove-fingerprints": "^0.0.2",
@@ -65,12 +65,12 @@
     "gatsby-plugin-typescript": "^5.13.1",
     "gatsby-plugin-typography": "^5.13.1",
     "gatsby-remark-autolink-headers": "^6.13.1",
-    "gatsby-remark-copy-linked-files": "^6.13.1",
+    "gatsby-remark-copy-linked-files": "^6.13.2",
     "gatsby-remark-emojis": "^0.4.3",
     "gatsby-remark-external-links": "0.0.4",
-    "gatsby-remark-images": "^7.13.1",
+    "gatsby-remark-images": "^7.13.2",
     "gatsby-remark-katex": "^7.13.1",
-    "gatsby-remark-prismjs": "^7.13.1",
+    "gatsby-remark-prismjs": "^7.13.2",
     "gatsby-source-filesystem": "^5.13.1",
     "gatsby-transformer-remark": "^6.13.1",
     "gatsby-transformer-sharp": "^5.13.1",
@@ -91,30 +91,30 @@
     "react-share": "^5.1.0",
     "react-typography": "^0.16.23",
     "redux": "^5.0.1",
-    "terser": "^5.31.3",
+    "terser": "^5.34.1",
     "theme-ui": "^0.16.2",
     "typography": "^0.16.24"
   },
   "devDependencies": {
-    "@types/lodash": "^4.17.7",
-    "@types/react": "^18.3.3",
+    "@types/lodash": "^4.17.9",
+    "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
     "@types/react-helmet": "^6.1.11",
-    "@types/react-redux": "^7.1.33",
-    "@types/typography": "^0.16.7",
-    "@typescript-eslint/eslint-plugin": "^8.0.0",
-    "@typescript-eslint/parser": "^8.0.0",
-    "autoprefixer": "^10.4.19",
-    "eslint": "^9.8.0",
+    "@types/react-redux": "^7.1.34",
+    "@types/typography": "^0.16.8",
+    "@typescript-eslint/eslint-plugin": "^8.7.0",
+    "@typescript-eslint/parser": "^8.7.0",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^9.11.1",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-import": "^2.30.0",
     "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-react": "^7.35.0",
+    "eslint-plugin-react": "^7.37.0",
     "gh-pages": "^6.1.1",
-    "postcss": "^8.4.40",
+    "postcss": "^8.4.47",
     "prettier": "^3.3.3",
-    "tailwindcss": "^3.4.7",
-    "typescript": "^5.5.4"
+    "tailwindcss": "^3.4.13",
+    "typescript": "^5.6.2"
   },
   "pnpm": {
     "overrides": {
@@ -146,7 +146,17 @@
       "katex@>=0.10.0-beta <0.16.10": ">=0.16.10",
       "express@<4.19.2": ">=4.19.2",
       "follow-redirects@<=1.15.5": ">=1.15.6",
-      "tar@<6.2.1": ">=6.2.1"
+      "tar@<6.2.1": ">=6.2.1",
+      "braces@<3.0.3": ">=3.0.3",
+      "ws@>=8.0.0 <8.17.1": ">=8.17.1",
+      "axios@>=1.3.2 <=1.7.3": ">=1.7.4",
+      "micromatch@<4.0.8": ">=4.0.8",
+      "webpack@>=5.0.0-alpha.0 <5.94.0": ">=5.94.0",
+      "body-parser@<1.20.3": ">=1.20.3",
+      "send@<0.19.0": ">=0.19.0",
+      "serve-static@<1.16.0": ">=1.16.0",
+      "express@<4.20.0": ">=4.20.0",
+      "path-to-regexp@<0.1.10": ">=0.1.10"
     }
   }
 }
