build(deps): packages

--- a/package.json
+++ b/package.json
@@ -35,86 +35,86 @@
     ">0.25%, not dead and supports es6-module"
   ],
   "dependencies": {
-    "@emotion/react": "^11.13.3",
-    "@eslint/eslintrc": "^3.1.0",
-    "@fortawesome/fontawesome-svg-core": "^6.6.0",
-    "@fortawesome/free-brands-svg-icons": "^6.6.0",
-    "@fortawesome/free-regular-svg-icons": "^6.6.0",
-    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@emotion/react": "^11.14.0",
+    "@eslint/eslintrc": "^3.3.1",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/free-regular-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@gatsbyjs/reach-router": "^2.0.1",
-    "@giscus/react": "^3.0.0",
-    "@mdx-js/react": "^3.0.1",
-    "@reduxjs/toolkit": "^2.2.7",
+    "@giscus/react": "^3.1.0",
+    "@mdx-js/react": "^3",
+    "@reduxjs/toolkit": "^2.8.2",
     "cross-env": "^7.0.3",
-    "css-minimizer-webpack-plugin": "^7.0.0",
-    "gatsby": "^5.13.7",
-    "gatsby-plugin-feed": "^5.13.1",
-    "gatsby-plugin-google-gtag": "^5.13.1",
-    "gatsby-plugin-image": "^3.13.1",
-    "gatsby-plugin-manifest": "^5.13.1",
-    "gatsby-plugin-offline": "^6.13.3",
+    "css-minimizer-webpack-plugin": "^7.0.2",
+    "gatsby": "^5.14.5",
+    "gatsby-plugin-feed": "^5.14.0",
+    "gatsby-plugin-google-gtag": "^5.14.0",
+    "gatsby-plugin-image": "^3.14.0",
+    "gatsby-plugin-manifest": "^5.14.0",
+    "gatsby-plugin-offline": "^6.14.0",
     "gatsby-plugin-pnpm-gatsby-5": "^1.2.11",
-    "gatsby-plugin-react-helmet": "^6.13.1",
+    "gatsby-plugin-react-helmet": "^6.14.0",
     "gatsby-plugin-remove-fingerprints": "^0.0.2",
     "gatsby-plugin-robots-txt": "^1.8.0",
-    "gatsby-plugin-sass": "^6.13.1",
-    "gatsby-plugin-sharp": "^5.13.1",
-    "gatsby-plugin-sitemap": "^6.13.1",
-    "gatsby-plugin-theme-ui": "^0.16.2",
-    "gatsby-plugin-typescript": "^5.13.1",
-    "gatsby-plugin-typography": "^5.13.1",
-    "gatsby-remark-autolink-headers": "^6.13.1",
-    "gatsby-remark-copy-linked-files": "^6.13.2",
+    "gatsby-plugin-sass": "^6.14.0",
+    "gatsby-plugin-sharp": "^5.14.0",
+    "gatsby-plugin-sitemap": "^6.14.0",
+    "gatsby-plugin-theme-ui": "^0.17.2",
+    "gatsby-plugin-typescript": "^5.14.0",
+    "gatsby-plugin-typography": "^5.14.0",
+    "gatsby-remark-autolink-headers": "^6.14.0",
+    "gatsby-remark-copy-linked-files": "^6.14.0",
     "gatsby-remark-emojis": "^0.4.3",
     "gatsby-remark-external-links": "0.0.4",
-    "gatsby-remark-images": "^7.13.2",
-    "gatsby-remark-katex": "^7.13.1",
-    "gatsby-remark-prismjs": "^7.13.2",
-    "gatsby-source-filesystem": "^5.13.1",
-    "gatsby-transformer-remark": "^6.13.1",
-    "gatsby-transformer-sharp": "^5.13.1",
-    "katex": "0.16.11",
+    "gatsby-remark-images": "^7.14.0",
+    "gatsby-remark-katex": "^7.14.0",
+    "gatsby-remark-prismjs": "^7.14.0",
+    "gatsby-source-filesystem": "^5.14.0",
+    "gatsby-transformer-remark": "^6.14.0",
+    "gatsby-transformer-sharp": "^5.14.0",
+    "katex": "0.16.22",
     "lodash": "^4.17.21",
     "mobile-detect": "^1.4.5",
     "moment": "^2.30.1",
-    "node-sass": "^9.0.0",
-    "parse-path": "^7.0.0",
+    "parse-path": "^7.1.0",
     "prism-themes": "^1.9.0",
-    "prismjs": "^1.29.0",
+    "prismjs": "^1.30.0",
     "prop-types": "^15.8.1",
-    "react": "^18.3.1",
+    "react": "^18",
     "react-adsense": "^0.1.0",
-    "react-dom": "^18.3.1",
+    "react-dom": "^18",
     "react-helmet": "^6.1.0",
-    "react-redux": "^9.1.2",
-    "react-share": "^5.1.0",
+    "react-redux": "^9.2.0",
+    "react-share": "^5.2.2",
     "react-typography": "^0.16.23",
     "redux": "^5.0.1",
-    "terser": "^5.34.1",
-    "theme-ui": "^0.16.2",
+    "sass": "^1.89.2",
+    "sharp": "^0.34.3",
+    "terser": "^5.43.1",
+    "theme-ui": "^0.17.2",
     "typography": "^0.16.24"
   },
   "devDependencies": {
-    "@types/lodash": "^4.17.9",
-    "@types/react": "^18.3.10",
-    "@types/react-dom": "^18.3.0",
+    "@types/lodash": "^4.17.20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "@types/react-helmet": "^6.1.11",
     "@types/react-redux": "^7.1.34",
     "@types/typography": "^0.16.8",
-    "@typescript-eslint/eslint-plugin": "^8.7.0",
-    "@typescript-eslint/parser": "^8.7.0",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^9.11.1",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.30.0",
-    "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-react": "^7.37.0",
-    "gh-pages": "^6.1.1",
-    "postcss": "^8.4.47",
-    "prettier": "^3.3.3",
-    "tailwindcss": "^3.4.13",
-    "typescript": "^5.6.2"
+    "@typescript-eslint/eslint-plugin": "^8.37.0",
+    "@typescript-eslint/parser": "^8.37.0",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^9.31.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-prettier": "^5.5.3",
+    "eslint-plugin-react": "^7.37.5",
+    "gh-pages": "^6.3.0",
+    "prettier": "^3.6.2",
+    "tailwindcss": "^4.1.11",
+    "typescript": "^5.8.3"
   },
   "pnpm": {
     "overrides": {
@@ -156,7 +156,14 @@
       "send@<0.19.0": ">=0.19.0",
       "serve-static@<1.16.0": ">=1.16.0",
       "express@<4.20.0": ">=4.20.0",
-      "path-to-regexp@<0.1.10": ">=0.1.10"
-    }
+      "path-to-regexp@<0.1.10": ">=0.1.10",
+      "cookie@<0.7.0": ">=0.7.0",
+      "cross-spawn@<6.0.6": ">=6.0.6",
+      "cross-spawn@>=7.0.0 <7.0.5": ">=7.0.5",
+      "path-to-regexp@<0.1.12": ">=0.1.12"
+    },
+    "onlyBuiltDependencies": [
+      "sharp"
+    ]
   }
 }
