--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "gatsby-plugin-manifest": "^5.14.0",
     "gatsby-plugin-offline": "^6.14.0",
     "gatsby-plugin-pnpm-gatsby-5": "^1.2.11",
+    "gatsby-plugin-preact": "^7.14.0",
     "gatsby-plugin-react-helmet": "^6.14.0",
     "gatsby-plugin-remove-fingerprints": "^0.0.2",
     "gatsby-plugin-robots-txt": "^1.8.0",
@@ -79,6 +80,8 @@
     "mobile-detect": "^1.4.5",
     "moment": "^2.30.1",
     "parse-path": "^7.1.0",
+    "preact": "^10.26.9",
+    "preact-render-to-string": "^6.5.13",
     "prism-themes": "^1.9.0",
     "prismjs": "^1.30.0",
     "prop-types": "^15.8.1",
